<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_margin="8dp"
        android:background="@color/primaryLightColor"
        android:id="@+id/info_sheet"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/info_sheet_0"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fnl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fn"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info_sheet_1"
                android:textColor="@color/primaryTextColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lnl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ln"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info_sheet_2"
                android:textColor="@color/primaryTextColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_gravity="center"
            android:theme="@style/MyButton"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitSheet"
            android:text="@string/info_sheet_btn"
            android:layout_margin="8dp"
            android:padding="15dp"/>

</LinearLayout>