<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        android:orientation="vertical"
        android:paddingTop="10dp">

    <ImageView
            android:contentDescription="@string/app_image"
            android:id="@+id/centre_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/centre_image"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_leaderboard" app:layout_constraintTop_toTopOf="parent"/>


    <Button
            android:theme="@style/MyButton"
            android:id="@+id/button_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard"
            app:layout_constraintRight_toLeftOf="@id/button_leaderboard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_play_tap_tiles"
            android:layout_margin="8dp"
            android:padding="15dp"/>

    <Button
            android:theme="@style/MyButton"
            android:id="@+id/button_leaderboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            app:layout_constraintLeft_toRightOf="@id/button_lb"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_play_tap_tiles"
            android:layout_margin="8dp"
            android:padding="15dp"/>

    <Button
            android:theme="@style/MyButton"
            android:id="@+id/button_play_tap_tiles"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:padding="15dp" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>