<FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/game_over"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/viewKonfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:textSize="26sp"
                android:text="@string/game_over"
                android:id="@+id/tv_game_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_details"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:textSize="22sp"
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toBottomOf="@+id/tv_game_over"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"/>
        <Button
                android:textSize="18sp"
                android:padding="10dp"
                android:theme="@style/MyButton2"
                android:id="@+id/btn_return"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/returnx"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_lb"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:textSize="18sp"
                android:padding="10dp"
                android:theme="@style/MyButton2"
                android:text="@string/leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_lb"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_replay"/>
        <Button
                android:textSize="18sp"
                android:padding="10dp"
                android:theme="@style/MyButton2"
                android:text="@string/replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_replay"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
