<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >

                    <ImageView
                            android:id="@+id/fill_tile_0"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_0"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>

                    <ImageView
                            android:id="@+id/fill_tile_1"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_1"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>

                    <ImageView
                            android:id="@+id/fill_tile_2"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_2"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>

                    <ImageView
                            android:id="@+id/fill_tile_3"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_3"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >

                    <ImageView
                            android:id="@+id/fill_tile_4"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_4"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>

                    <ImageView
                            android:id="@+id/fill_tile_5"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_5"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>

                    <ImageView
                            android:id="@+id/fill_tile_6"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_6"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>

                    <ImageView
                            android:id="@+id/fill_tile_7"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_7"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_fill_tile_empty"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/tap_tile_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp">

            <TextView
                    android:id="@+id/tap_tile_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/white"
                    android:fontFamily="fonts/Averia-Regular.ttf"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >

                    <ImageView
                            android:id="@+id/tap_tile_0"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_0"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_red"/>

                    <ImageView
                            android:id="@+id/tap_tile_1"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_1"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_green"/>

                    <ImageView
                            android:id="@+id/tap_tile_2"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_2"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_blue"/>

                    <ImageView
                            android:id="@+id/tap_tile_3"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_3"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_yellow"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >

                    <ImageView
                            android:id="@+id/tap_tile_4"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_4"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_magenta"/>

                    <ImageView
                            android:id="@+id/tap_tile_5"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_5"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_indigo"/>

                    <ImageView
                            android:id="@+id/tap_tile_6"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_6"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_brown"/>

                    <ImageView
                            android:id="@+id/tap_tile_7"
                            android:layout_width="@dimen/tap_tile_size"
                            android:layout_height="@dimen/tap_tile_size"
                            android:contentDescription="@string/tile_7"
                            android:padding="@dimen/inter_tile_padding"
                            android:src="@drawable/ic_tile_gray"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>